--- a/webook-fe/package.json
+++ b/webook-fe/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.6.12",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -17,10 +18,13 @@
     "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
-    "postcss": "8.4.26",
+    "moment": "^2.29.4",
+    "next": "^13.5.6",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
