--- a/webook/docker-compose.yml
+++ b/webook/docker-compose.yml
@@ -14,3 +14,9 @@ services:
 #      - 外部访问用 13316
       - 13316:3306
 
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6379:6379'
